--- a/titeduplugin/build.gradle
+++ b/titeduplugin/build.gradle
@@ -11,7 +11,7 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
+    resourcePrefix "tit_"
     buildTypes {
         release {
             minifyEnabled false
