--- a/videoplugin/build.gradle
+++ b/videoplugin/build.gradle
@@ -11,7 +11,7 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
+    resourcePrefix "video_"
     buildTypes {
         release {
             minifyEnabled false
