--- a/pluginxmly/local.properties
+++ b/pluginxmly/local.properties
@@ -8,3 +8,10 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=/Users/salton/Library/Android/sdk
+
+org.gradle.parallel=true
+org.gradle.daemon=true
+android.useDeprecatedNdk=true
+signPropertiesCfgFile=sign.properties
+android.enableBuildCache=true
+org.gradle.jvmargs=-Xmx2048m -XX\:MaxPermSize\=512m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
