--- a/pluginxmly/xmly/src/main/AndroidManifest.xml
+++ b/pluginxmly/xmly/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
-        <activity android:name=".XmlyPluginAty">
+        <activity android:name=".XmlyPluginAty" android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
