--- a/pluginxmly/xmly/build.gradle
+++ b/pluginxmly/xmly/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation "com.android.support:design:${rootProject.ext.dependVersion.androidSupportSdkVersion}"
     implementation 'cn.bingoogolapple:bga-banner:2.2.4@aar'
     implementation 'me.weyye.hipermission:library:1.0.7'
+    implementation 'com.sothree.slidinguppanel:library:3.3.1'
 }
 
 //task to copy library to libs
