--- a/pluginxmly/gradle.properties
+++ b/pluginxmly/gradle.properties
@@ -11,4 +11,4 @@ org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048m -XX\:MaxPermSize\=512m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 android.enableBuildCache=true
 # 是否使用新的aapt
-android.enableAapt2=false
+android.enableAapt2=true
