--- a/pluginxmly/xmly/build.gradle
+++ b/pluginxmly/xmly/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion rootProject.ext.android.targetSdkVersion as Integer
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
     }
     resourcePrefix "xmly_"
     buildTypes {
