--- a/pluginxmly/xmly/build.gradle
+++ b/pluginxmly/xmly/build.gradle
@@ -11,6 +11,11 @@ android {
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
+        ndk {
+            abiFilters "armeabi-v7a"
+        }
+//        resConfigs "hdpi", "xhdpi"
+        resConfigs "${rootProject.ext.dependVersion.appLanguage}" as String
     }
     resourcePrefix "xmly_"
     buildTypes {
@@ -43,7 +48,10 @@ dependencies {
 //    implementation project(':baselib')
     //    implementation "com.squareup.retrofit2:converter-scalars:2.4.0"
     //    implementation 'com.qihoo360.replugin:replugin-plugin-lib:2.2.4'
-    implementation "com.salton123:baselib:0.0.0.1"
+    implementation("com.salton123:baselib:0.0.0.1") {
+        exclude group: "io.reactivex.rxjava2"
+        exclude group: "com.squareup.retrofit2"
+    }
     implementation "com.android.support:design:${rootProject.ext.dependVersion.androidSupportSdkVersion}"
     implementation 'cn.bingoogolapple:bga-banner:2.2.4@aar'
     implementation 'me.weyye.hipermission:library:1.0.7'
