--- a/pluginxmly/xmly/build.gradle
+++ b/pluginxmly/xmly/build.gradle
@@ -16,6 +16,13 @@ android {
         }
 //        resConfigs "hdpi", "xhdpi"
         resConfigs "${rootProject.ext.dependVersion.appLanguage}" as String
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
     }
     resourcePrefix "xmly_"
     buildTypes {
@@ -39,23 +46,43 @@ android {
             println "dirs=" + res.getSrcDirs()
         }
     }
+    packagingOptions {
+        pickFirst "lib/armeabi-v7a/libRSSupport.so"
+        pickFirst "lib/mips/libRSSupport.so"
+        pickFirst "lib/arm64-v8a/libRSSupport.so"
+        pickFirst "lib/mips/libRSSupport.so"
+        pickFirst "lib/x86/libRSSupport.so"
+        pickFirst "lib/x86_64/libRSSupport.so"
+
+        pickFirst "lib/mips/librsjni.so"
+        pickFirst "lib/arm64-v8a/librsjni.so"
+        pickFirst "lib/x86/librsjni.so"
+        pickFirst "lib/arm64-v8a/librsjni.so"
+        pickFirst "lib/x86_64/librsjni.so"
+        pickFirst "lib/armeabi-v7a/librsjni.so"
+    }
 }
 
-apply plugin: 'replugin-plugin-gradle'
+//apply plugin: 'replugin-plugin-gradle'
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 //    implementation project(':baselib')
     //    implementation "com.squareup.retrofit2:converter-scalars:2.4.0"
     //    implementation 'com.qihoo360.replugin:replugin-plugin-lib:2.2.4'
-    implementation("com.salton123:baselib:0.0.0.1") {
-        exclude group: "io.reactivex.rxjava2"
-        exclude group: "com.squareup.retrofit2"
-    }
+    implementation("com.salton123:baselib:0.0.0.1")
+//            {
+//        exclude group: "io.reactivex.rxjava2"
+//        exclude group: "com.squareup.retrofit2"
+//    }
     implementation "com.android.support:design:${rootProject.ext.dependVersion.androidSupportSdkVersion}"
     implementation 'cn.bingoogolapple:bga-banner:2.2.4@aar'
     implementation 'me.weyye.hipermission:library:1.0.7'
-    implementation 'com.sothree.slidinguppanel:library:3.3.1'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+    compile "com.android.support:cardview-v7:${rootProject.ext.dependVersion.androidSupportSdkVersion}"
+    compile 'com.huxq17.xrefreshview:xrefreshview:3.6.9'
+    compile 'io.paperdb:paperdb:2.6'
 }
 
 //task to copy library to libs
