--- a/pluginxmly/xmly/src/main/AndroidManifest.xml
+++ b/pluginxmly/xmly/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <!-- SD 卡读写权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
     <application
         android:name=".XmlyApp"
@@ -22,7 +24,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
-        <activity android:name=".XmlyPluginAty" android:configChanges="orientation"
+        <activity
+            android:name=".XmlyPluginAty"
+            android:configChanges="orientation"
             android:screenOrientation="portrait"
             >
             <intent-filter>
