--- a/pluginrecord/build.gradle
+++ b/pluginrecord/build.gradle
@@ -11,8 +11,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$properyVersion.kotlinVersion"
-        classpath "com.qihoo360.replugin:replugin-host-gradle:$properyVersion.repluginVersion"
-        classpath "com.qihoo360.replugin:replugin-plugin-gradle:$properyVersion.repluginVersion"
+//        classpath "com.qihoo360.replugin:replugin-host-gradle:$properyVersion.repluginVersion"
+//        classpath "com.qihoo360.replugin:replugin-plugin-gradle:$properyVersion.repluginVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         // 注册MobSDK
