--- a/pluginrecord/record/src/main/AndroidManifest.xml
+++ b/pluginrecord/record/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.salton123.recordplugin" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.salton123.recordplugin">
     <!-- 添加必要的权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -16,7 +17,9 @@
         android:label="@string/record_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".RecordApp"
         android:theme="@style/record_AppTheme"
+        tools:replace="android:name"
         >
         <activity android:name=".RecordPluginAty">
             <intent-filter>
