--- a/pluginrecord/record/build.gradle
+++ b/pluginrecord/record/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.mob.sdk'
 android {
-     compileSdkVersion "${rootProject.ext.android.compileSdkVersion}" as Integer
+    compileSdkVersion "${rootProject.ext.android.compileSdkVersion}" as Integer
     buildToolsVersion "${rootProject.ext.android.buildToolsVersion}"
     defaultConfig {
         minSdkVersion rootProject.ext.android.minSdkVersion as Integer
@@ -42,14 +42,14 @@ MobSDK {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-   implementation "com.salton123:baselib:0.0.0.1"
+    implementation "com.salton123:baselib:0.0.0.1"
     //  LiveData & ViewModel
     implementation "android.arch.lifecycle:extensions:1.1.1"
     //  LiveData with ReactiveStreams API
     implementation "android.arch.lifecycle:reactivestreams:1.1.1"
     implementation 'com.huxq17.xrefreshview:xrefreshview:3.6.9'
 //    implementation 'com.qihoo360.replugin:replugin-plugin-lib:2.2.4'
-//    implementation 'com.android.support:appcompat-v7:24.2.0'
+    implementation 'com.android.support:cardview-v7:26.0.1'
 //    implementation 'com.android.support:design:24.2.0'
 //    implementation 'com.android.support:recyclerview-v7:24.2.0'
     implementation 'com.qmuiteam:qmui:1.1.7'
