完善录屏逻辑

--- a/pluginbase/build.gradle
+++ b/pluginbase/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         jcenter()
         mavenLocal()
         maven { url '../../repo' }
+        maven { url "https://dl.bintray.com/456838/saltonFramework" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -32,7 +33,7 @@ allprojects {
         mavenLocal()
         maven { url 'https://jitpack.io' }
         maven { url '../../repo' }
-
+        maven { url "https://dl.bintray.com/456838/saltonFramework" }
     }
     configurations.all {
         resolutionStrategy {
