--- a/pluginbase/gradle.properties
+++ b/pluginbase/gradle.properties
@@ -12,5 +12,5 @@ org.gradle.jvmargs=-Xmx2048m -XX\:MaxPermSize\=512m -XX\:+HeapDumpOnOutOfMemoryE
 android.enableBuildCache=true
 # 是否使用新的aapt
 android.enableAapt2=false
-systemProp.https.proxyPort=1080
-systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=1080
+#systemProp.https.proxyHost=127.0.0.1
