--- a/pluginbase/local.properties
+++ b/pluginbase/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 29 10:41:54 CST 2018
-sdk.dir=/Users/salton/Library/Android/sdk
+#Mon Oct 01 23:31:42 CST 2018
+sdk.dir=F\:\\01Android\\sdk
