--- a/pluginrecord/local.properties
+++ b/pluginrecord/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 29 10:40:45 CST 2018
-sdk.dir=/Users/salton/Library/Android/sdk
+#Mon Oct 01 23:40:23 CST 2018
+sdk.dir=F\:\\01Android\\sdk
