--- a/pluginxmly/build.gradle
+++ b/pluginxmly/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         mavenLocal()
         maven { url '../../repo' }
         maven { url "https://jitpack.io" }
+        maven { url "https://dl.bintray.com/456838/saltonFramework" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -32,6 +33,7 @@ allprojects {
         mavenLocal()
         maven { url 'https://jitpack.io' }
         maven { url '../../repo' }
+        maven { url "https://dl.bintray.com/456838/saltonFramework" }
     }
     configurations.all {
         resolutionStrategy {
