--- a/pluginxmly/local.properties
+++ b/pluginxmly/local.properties
@@ -4,11 +4,11 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 07 11:11:46 CST 2018
+#Tue Oct 09 17:29:08 CST 2018
 org.gradle.jvmargs=-Xmx2048m -XX\:MaxPermSize\=512m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 org.gradle.daemon=true
+sdk.dir=/Users/salton/Library/Android/sdk
 signPropertiesCfgFile=sign.properties
-sdk.dir=F\:\\01Android\\sdk
 org.gradle.parallel=true
-android.enableBuildCache=true
 android.useDeprecatedNdk=true
+android.enableBuildCache=true
