--- a/pluginPhotoCompression/app/build.gradle
+++ b/pluginPhotoCompression/app/build.gradle
@@ -11,6 +11,11 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    defaultConfig {
+        ndk {
+            abiFilters 'armeabi-v7a'
+        }
+    }
 //    resourcePrefix "video_"
     buildTypes {
         release {
@@ -32,7 +37,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.salton123:baselib:0.0.0.1"
 //    implementation 'com.qihoo360.replugin:replugin-plugin-lib:2.2.4'
-    implementation 'top.zibin:Luban-turbo:1.0.0'
     implementation 'me.weyye.hipermission:library:1.0.8'
-    implementation 'com.zhihu.android:matisse:+'
 }
