--- a/pluginPhotoCompression/app/src/main/AndroidManifest.xml
+++ b/pluginPhotoCompression/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.salton123.videoplugin" >
+    package="com.salton123.compressionplugin" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <!--存储读写权限 -->
@@ -26,6 +26,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="com.salton123.compressionplugin.XApp"
         android:theme="@style/AppTheme"
         >
         <activity android:name="com.salton123.compressionplugin.VideoPluginAty">
@@ -34,6 +35,20 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".StartActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_start" >
         </activity>
     </application>
 
