--- a/pluginbase/baselib/build.gradle
+++ b/pluginbase/baselib/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
 //    implementation 'uk.co.chrisjenx:calligraphy:2.2.0'
 //    api "com.salton123:saltonFramework:${rootProject.ext.dependVersion.saltonframeworkVersion}"
-    implementation "com.salton123:saltonFramework:0.1.3.3"
+    api "com.salton123:saltonFramework:0.1.4.2"
 }
 
 //./gradlew clean uploadArchives
