--- a/pluginbase/build.gradle
+++ b/pluginbase/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         mavenLocal()
         maven { url '../../repo' }
         maven { url "https://dl.bintray.com/456838/saltonFramework" }
+        maven { url "https://dl.bintray.com/456838/maven" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
