--- a/public/config.gradle
+++ b/public/config.gradle
@@ -14,7 +14,7 @@ ext {
             glideSdkVersion         : "4.0.0",
             rxJava                  : "2.1.5",
             rxAndroid               : "2.0.1",
-            saltonframeworkVersion  : "+",
+            saltonframeworkVersion  : "0.1.3.0",
             ijkplayerVersion        : "0.8.8",
             appLanguage             : "en",//# 说明：如果是相同资源放在res目录，如果是中文资源和英文资源，要分别存放在res_zh/res_en，并且不能存放同名资源在res
             appDevelop              : true,//# 是否开发模式
